{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 20,
  "lineage": "5913fa0a-1f61-61e9-8191-d67b88e33835",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9498f2dc66bcba0",
            "association_id": "eipassoc-095aefcb475435edc",
            "domain": "vpc",
            "id": "eipalloc-0d9498f2dc66bcba0",
            "instance": "i-0467b0537c06432ce",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0b25e0dbfc2db966b",
            "private_dns": "ip-192-168-224-217.ap-northeast-2.compute.internal",
            "private_ip": "192.168.224.217",
            "public_dns": "ec2-52-78-251-181.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.251.181",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "clever-vsup_eip",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "tags_all": {
              "Name": "clever-vsup_eip",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_k8s_master_profile",
            "aws_iam_role.ec2_k8s_master_role",
            "aws_instance.instance",
            "aws_internet_gateway.internet_gateway",
            "aws_key_pair.key_pair",
            "aws_security_group.default_sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041ac37d8cb89bf97",
            "association_id": "eipassoc-0234f8a3a6ca51210",
            "domain": "vpc",
            "id": "eipalloc-041ac37d8cb89bf97",
            "instance": "i-06a4aa38a30d1f076",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0cd4259832b114ae4",
            "private_dns": "ip-192-168-47-189.ap-northeast-2.compute.internal",
            "private_ip": "192.168.47.189",
            "public_dns": "ec2-52-78-197-96.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.197.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "clever-vsup_eip",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "tags_all": {
              "Name": "clever-vsup_eip",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_k8s_master_profile",
            "aws_iam_role.ec2_k8s_master_role",
            "aws_instance.instance",
            "aws_internet_gateway.internet_gateway",
            "aws_key_pair.key_pair",
            "aws_security_group.default_sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf90badfaac4f183",
            "association_id": "eipassoc-073948a77d59b94f6",
            "domain": "vpc",
            "id": "eipalloc-0cf90badfaac4f183",
            "instance": "i-0aa093d860805e8ed",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0d93d6edcb0cfc894",
            "private_dns": "ip-192-168-206-181.ap-northeast-2.compute.internal",
            "private_ip": "192.168.206.181",
            "public_dns": "ec2-3-39-105-105.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.105.105",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "clever-vsup_eip",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "tags_all": {
              "Name": "clever-vsup_eip",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_k8s_master_profile",
            "aws_iam_role.ec2_k8s_master_role",
            "aws_instance.instance",
            "aws_internet_gateway.internet_gateway",
            "aws_key_pair.key_pair",
            "aws_security_group.default_sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-034000b759564de42",
            "arn": "arn:aws:ec2:ap-northeast-2:056936070848:instance/i-0467b0537c06432ce",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "clever-vsup_ec2_k8s_master_profile",
            "id": "i-0467b0537c06432ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "clever-vsup_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b25e0dbfc2db966b",
            "private_dns": "ip-192-168-224-217.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.224.217",
            "public_dns": "ec2-54-180-128-130.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.128.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "root_volume_clever-vsup",
                  "kubernetes.io/cluster/clever-vsup": "owned"
                },
                "throughput": 125,
                "volume_id": "vol-00906cb5af0cbb3c2",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e8e89ab1e828d519",
            "tags": {
              "Name": "clever-vsup-0",
              "Schedule": "running",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "tags_all": {
              "Name": "clever-vsup-0",
              "Schedule": "running",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ec770c8398e52141"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_k8s_master_profile",
            "aws_iam_role.ec2_k8s_master_role",
            "aws_key_pair.key_pair",
            "aws_security_group.default_sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-034000b759564de42",
            "arn": "arn:aws:ec2:ap-northeast-2:056936070848:instance/i-06a4aa38a30d1f076",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "clever-vsup_ec2_k8s_master_profile",
            "id": "i-06a4aa38a30d1f076",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "clever-vsup_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cd4259832b114ae4",
            "private_dns": "ip-192-168-47-189.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.47.189",
            "public_dns": "ec2-13-124-165-101.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.165.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "root_volume_clever-vsup",
                  "kubernetes.io/cluster/clever-vsup": "owned"
                },
                "throughput": 125,
                "volume_id": "vol-0354d39cf261c7503",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e8e89ab1e828d519",
            "tags": {
              "Name": "clever-vsup-1",
              "Schedule": "running",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "tags_all": {
              "Name": "clever-vsup-1",
              "Schedule": "running",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ec770c8398e52141"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_k8s_master_profile",
            "aws_iam_role.ec2_k8s_master_role",
            "aws_key_pair.key_pair",
            "aws_security_group.default_sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-034000b759564de42",
            "arn": "arn:aws:ec2:ap-northeast-2:056936070848:instance/i-0aa093d860805e8ed",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "clever-vsup_ec2_k8s_master_profile",
            "id": "i-0aa093d860805e8ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "clever-vsup_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d93d6edcb0cfc894",
            "private_dns": "ip-192-168-206-181.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.206.181",
            "public_dns": "ec2-13-125-243-229.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.243.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "root_volume_clever-vsup",
                  "kubernetes.io/cluster/clever-vsup": "owned"
                },
                "throughput": 125,
                "volume_id": "vol-0c43d757c8241ec09",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e8e89ab1e828d519",
            "tags": {
              "Name": "clever-vsup-2",
              "Schedule": "running",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "tags_all": {
              "Name": "clever-vsup-2",
              "Schedule": "running",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ec770c8398e52141"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_k8s_master_profile",
            "aws_iam_role.ec2_k8s_master_role",
            "aws_key_pair.key_pair",
            "aws_security_group.default_sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:056936070848:internet-gateway/igw-058c07ecd9994d9f6",
            "id": "igw-058c07ecd9994d9f6",
            "owner_id": "056936070848",
            "tags": {
              "Name": "clever-vsup_igw",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "tags_all": {
              "Name": "clever-vsup_igw",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "vpc_id": "vpc-0375594711ebe34d5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-058c07ecd9994d9f6",
            "id": "r-rtb-03ebf020dfbbfac031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ebf020dfbbfac03",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_table",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:056936070848:route-table/rtb-03ebf020dfbbfac03",
            "id": "rtb-03ebf020dfbbfac03",
            "owner_id": "056936070848",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "clever-vsup_route_table",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "tags_all": {
              "Name": "clever-vsup_route_table",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0375594711ebe34d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e10a870126a9afc8",
            "route_table_id": "rtb-03ebf020dfbbfac03",
            "subnet_id": "subnet-0e8e89ab1e828d519"
          },
          "dependencies": [
            "aws_route_table.route_table",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:056936070848:security-group/sg-0ec770c8398e52141",
            "description": "allow 22, 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec770c8398e52141",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "clever-vsup_default_sg",
            "name_prefix": "",
            "owner_id": "056936070848",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "clever-vsup_default_sg",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "tags_all": {
              "Name": "clever-vsup_default_sg",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0375594711ebe34d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:056936070848:security-group/sg-0b6c61f7d1c6d83e2",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6c61f7d1c6d83e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "clever-vsup_elb_sg",
            "name_prefix": "",
            "owner_id": "056936070848",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "clever-vsup_elb_sg",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "tags_all": {
              "Name": "clever-vsup_elb_sg",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0375594711ebe34d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:056936070848:subnet/subnet-0e8e89ab1e828d519",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.0/16",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8e89ab1e828d519",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "056936070848",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "clever-vsup_subnet",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "tags_all": {
              "Name": "clever-vsup_subnet",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "vpc_id": "vpc-0375594711ebe34d5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:056936070848:vpc/vpc-0375594711ebe34d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-075488bd4ea91fe02",
            "default_route_table_id": "rtb-0f8578087a2719185",
            "default_security_group_id": "sg-0018191684fb7ef6f",
            "dhcp_options_id": "dopt-16ec487d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0375594711ebe34d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8578087a2719185",
            "owner_id": "056936070848",
            "tags": {
              "Name": "clever-vsup_vpc",
              "kubernetes.io/cluster/clever-vsup": "owned"
            },
            "tags_all": {
              "Name": "clever-vsup_vpc",
              "kubernetes.io/cluster/clever-vsup": "owned"
            }
          }
        }
      ]
    }
  ]
}